--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,12 @@
     // "forceConsistentCasingInFileNames": true,
     // "noFallthroughCasesInSwitch": true
     
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
+      
+    
+    
+    
     "module": "commonjs",
     "declaration": true,
     "removeComments": true,
